# ontobio

./: .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  Makefile  README-developers.md  README.md  README.rst  bump.sh  fixed_test.gaf  more.gpi  pyproject.toml  requirements.txt  setup.py
conf/: config.yaml  planteome-config.yaml
docs/: Makefile  analyses.rst  api.rst  biolink.rst  commandline.rst  concepts.rst  conf.py  go_rules.rst  identifiers.rst  index.rst  inputs.rst  installation.rst  notebooks.rst  ontologies_advanced.rst  outputs.rst  quickstart.rst  search.rst
notebooks/: Find_All_Paths.ipynb  GO_Functional_Similarity.ipynb  GO_Functional_Similarity_using_AssocFiles.ipynb  Gene_Expression.ipynb  Intro_Local_Ontologies.ipynb  Lookup_KEGG_Genes_by_Pathway_Name.ipynb  Map2Slim_GO.ipynb  Map_Evidence_Codes.ipynb  Mouse_Gene_Phenotypes.ipynb  PTSD_Genes.ipynb  Parse_RareList.ipynb  Phenotype_Enrichment.ipynb  README.md  Remote_Ontology.ipynb  Summarize_GOTerm_Descendants.ipynb  TF_Pub_Analysis.ipynb  Uberon_mappings.ipynb  Wikidata_Ontology.ipynb
ontobio/: __init__.py  assoc_factory.py  assoc_schema.py  assocmodel.py  cgraph.py  config.py  config.yaml  ecomap.py  graph_io.py  lexmap.py  obograph_util.py  ontol.py  ontol_dataframe.py  ontol_factory.py  sim.py  slimmer.py  tsv_expander.py  xref_util.py
tests/: test_alt_id.py  test_assoc_writer.py  test_assocfactory.py  test_assocmodel.py  test_bgiparser.py  test_collections.py  test_config.py  test_ecomap.py  test_evidence_table.py  test_expand_tsv.py  test_gaference.py  test_gafparser.py  (+40 more)
(+205 files in other folders)
