[tool.poetry]
name = "ontobio"
version = "2.9.8"
description = ""
authors = ["Gene Ontology Consortium <helpdesk@geneontology.org>"]
readme = "README.rst"
license = "BSD"

packages = [
    { include = "bin" },
    { include = "ontobio"}
]

[tool.poetry.scripts]
validate = "bin.validate:cli"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = ">=6.0.0"
marshmallow = ">=3.0.0b11, <4.0.0"
jsobject = ">=0.0"
prefixcommons = ">=0.1.9"
requests = ">=0.0"
pip = ">=9.0.1"
wheel = ">0.25.0"
pysolr = ">=3.6.0"
networkx = ">=2.3"
matplotlib = "^3.9.2"
sparqlwrapper = ">=1.8.0"
pandas = ">=0.0"
scipy = ">=1.2.0"
jsonpickle = ">=0.0"
jsonpath-rw = ">=0.0"
pyshex = ">=0.7.11"
pytest = ">=0.0"
pytest-logging = ">=0.0"
pydotplus = ">=0.0"
plotly = ">=2.0.7"
yamldown = ">=0.1.7"
diskcache = ">=4.0.0"
bidict = ">=0.20.0"
dacite = ">=1.6.0"
pyparsing = "2.4.7"
twine = "^4.0.2"
PyYAML = "^6.0.1"
click = "^8.1.7"
chardet = "^5.2.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"